--- a/hw1/hw1.ipynb
+++ b/hw1/hw1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -120,10 +120,10 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.9.7, pytest-6.2.4, py-1.10.0, pluggy-0.13.1 -- /Users/zkolter/opt/anaconda3/bin/python3\n",
+      "platform darwin -- Python 3.10.9, pytest-7.2.1, pluggy-1.0.0 -- /Users/arapat/dev/virtualenv/py3/bin/python3\n",
       "cachedir: .pytest_cache\n",
-      "rootdir: /Users/zkolter/Dropbox/class/10-714/homework/hw1\n",
-      "plugins: pytest_check-1.0.4, anyio-2.2.0\n",
+      "rootdir: /Users/arapat/Library/CloudStorage/OneDrive-Personal/Project/thelogit/mlsys/hw1\n",
+      "plugins: anyio-3.6.2\n",
       "collected 21 items / 13 deselected / 8 selected                                \u001b[0m\n",
       "\n",
       "tests/test_autograd_hw.py::test_divide_forward \u001b[32mPASSED\u001b[0m\u001b[32m                    [ 12%]\u001b[0m\n",
@@ -135,7 +135,7 @@
       "tests/test_autograd_hw.py::test_negate_forward \u001b[32mPASSED\u001b[0m\u001b[32m                    [ 87%]\u001b[0m\n",
       "tests/test_autograd_hw.py::test_transpose_forward \u001b[32mPASSED\u001b[0m\u001b[32m                 [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m8 passed\u001b[0m, \u001b[33m13 deselected\u001b[0m\u001b[32m in 0.48s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001b[32m======================= \u001b[32m\u001b[1m8 passed\u001b[0m, \u001b[33m13 deselected\u001b[0m\u001b[32m in 0.16s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
@@ -271,14 +271,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 140,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "etSSMzD0fee0",
     "outputId": "2e8d28f1-9dee-4ad0-d9c3-9d9bdb1c30ea",
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -286,10 +286,10 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.9.7, pytest-6.2.4, py-1.10.0, pluggy-0.13.1 -- /Users/zkolter/opt/anaconda3/bin/python3\n",
+      "platform darwin -- Python 3.10.9, pytest-7.2.1, pluggy-1.0.0 -- /Users/arapat/dev/virtualenv/py3/bin/python3\n",
       "cachedir: .pytest_cache\n",
-      "rootdir: /Users/zkolter/Dropbox/class/10-714/homework/hw1\n",
-      "plugins: pytest_check-1.0.4, anyio-2.2.0\n",
+      "rootdir: /Users/arapat/Library/CloudStorage/OneDrive-Personal/Project/thelogit/mlsys/hw1\n",
+      "plugins: anyio-3.6.2\n",
       "collected 21 items / 12 deselected / 9 selected                                \u001b[0m\n",
       "\n",
       "tests/test_autograd_hw.py::test_divide_backward \u001b[32mPASSED\u001b[0m\u001b[32m                   [ 11%]\u001b[0m\n",
@@ -302,7 +302,7 @@
       "tests/test_autograd_hw.py::test_broadcast_to_backward \u001b[32mPASSED\u001b[0m\u001b[32m             [ 88%]\u001b[0m\n",
       "tests/test_autograd_hw.py::test_summation_backward \u001b[32mPASSED\u001b[0m\u001b[32m                [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m9 passed\u001b[0m, \u001b[33m12 deselected\u001b[0m\u001b[32m in 0.53s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001b[32m======================= \u001b[32m\u001b[1m9 passed\u001b[0m, \u001b[33m12 deselected\u001b[0m\u001b[32m in 0.28s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 141,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -354,14 +354,14 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.9.7, pytest-6.2.4, py-1.10.0, pluggy-0.13.1\n",
-      "rootdir: /Users/zkolter/Dropbox/class/10-714/homework/hw1\n",
-      "plugins: pytest_check-1.0.4, anyio-2.2.0\n",
+      "platform darwin -- Python 3.10.9, pytest-7.2.1, pluggy-1.0.0\n",
+      "rootdir: /Users/arapat/Library/CloudStorage/OneDrive-Personal/Project/thelogit/mlsys/hw1\n",
+      "plugins: anyio-3.6.2\n",
       "collected 21 items / 20 deselected / 1 selected                                \u001b[0m\n",
       "\n",
       "tests/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                              [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m20 deselected\u001b[0m\u001b[32m in 0.43s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m20 deselected\u001b[0m\u001b[32m in 0.16s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
@@ -411,13 +411,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 142,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "4L37C7ez8fkM",
-    "outputId": "f2846195-0754-465c-97d7-c36a7ade8cea"
+    "outputId": "f2846195-0754-465c-97d7-c36a7ade8cea",
+    "scrolled": false
    },
    "outputs": [
     {
@@ -425,14 +426,14 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.9.7, pytest-6.2.4, py-1.10.0, pluggy-0.13.1\n",
-      "rootdir: /Users/zkolter/Dropbox/class/10-714/homework/hw1\n",
-      "plugins: pytest_check-1.0.4, anyio-2.2.0\n",
+      "platform darwin -- Python 3.10.9, pytest-7.2.1, pluggy-1.0.0\n",
+      "rootdir: /Users/arapat/Library/CloudStorage/OneDrive-Personal/Project/thelogit/mlsys/hw1\n",
+      "plugins: anyio-3.6.2\n",
       "collected 21 items / 20 deselected / 1 selected                                \u001b[0m\n",
       "\n",
       "tests/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                              [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m20 deselected\u001b[0m\u001b[32m in 0.47s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m20 deselected\u001b[0m\u001b[32m in 0.17s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
@@ -486,13 +487,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 143,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "CpwK-c989OkI",
-    "outputId": "0f145d00-6dce-46c9-d5f4-5d72e6d65419"
+    "outputId": "0f145d00-6dce-46c9-d5f4-5d72e6d65419",
+    "scrolled": false
    },
    "outputs": [
     {
@@ -500,14 +502,14 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.9.7, pytest-6.2.4, py-1.10.0, pluggy-0.13.1\n",
-      "rootdir: /Users/zkolter/Dropbox/class/10-714/homework/hw1\n",
-      "plugins: pytest_check-1.0.4, anyio-2.2.0\n",
+      "platform darwin -- Python 3.10.9, pytest-7.2.1, pluggy-1.0.0\n",
+      "rootdir: /Users/arapat/Library/CloudStorage/OneDrive-Personal/Project/thelogit/mlsys/hw1\n",
+      "plugins: anyio-3.6.2\n",
       "collected 21 items / 20 deselected / 1 selected                                \u001b[0m\n",
       "\n",
       "tests/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                              [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m20 deselected\u001b[0m\u001b[32m in 0.69s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m20 deselected\u001b[0m\u001b[32m in 2.56s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
@@ -563,15 +565,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "LHKC82ex9wFg",
-    "outputId": "5a319557-624e-45be-e839-3e1d30efb6f5"
+    "outputId": "5a319557-624e-45be-e839-3e1d30efb6f5",
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.10.9, pytest-7.2.1, pluggy-1.0.0\n",
+      "rootdir: /Users/arapat/Library/CloudStorage/OneDrive-Personal/Project/thelogit/mlsys/hw1\n",
+      "plugins: anyio-3.6.2\n",
+      "collected 21 items / 20 deselected / 1 selected                                \u001b[0m\n",
+      "\n",
+      "tests/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                              [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m20 deselected\u001b[0m\u001b[32m in 4.44s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pytest -l -k \"nn_epoch_ndl\""
    ]
@@ -599,7 +618,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -613,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
